gedit-recent: fix filtering of a filenames that need uri escaping

When a user types a filename into the search popover, gedit tries
to find matches from recently used documents.  It does this by
returning all recently used documents that have what the user typed
as a substring of the document uri.

GtkRecentInfo provides two different apis for returning the associated
uri: gtk_recent_info_get_uri() and gtk_recent_info_get_uri_display().
The former returns the uri in a canonical representation with non-ascii
characters escaped using url escaping rules.  The latter returns the
uri with non-ascii characters unescaped.  GeditRecent uses the
canonicalized, escaping function, so its substring search fails
on non-ascii filenames.

This commit changes the code over to use the other variant.

https://bugzilla.gnome.org/show_bug.cgi?id=753481